--- a/Prototype/Prototype/Prototype/Base.lproj/Main.storyboard
+++ b/Prototype/Prototype/Prototype/Base.lproj/Main.storyboard
@@ -103,6 +103,7 @@
                                 <connections>
                                     <outlet property="descriptionLabel" destination="ajA-KY-8os" id="CAv-SR-oBR"/>
                                     <outlet property="feedImageView" destination="tGY-m9-cgb" id="3uR-ae-63g"/>
+                                    <outlet property="imageContainer" destination="sR2-p1-gyI" id="l4H-68-ag5"/>
                                     <outlet property="locationContainer" destination="1pP-Qo-q51" id="r0Y-BR-QHO"/>
                                     <outlet property="locationLabel" destination="rLy-4y-uK1" id="KfS-L6-dnF"/>
                                 </connections>
@@ -114,6 +115,12 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" id="c8p-C0-3Zl"/>
+                    <refreshControl key="refreshControl" opaque="NO" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" id="dG6-8V-zr6">
+                        <autoresizingMask key="autoresizingMask"/>
+                        <connections>
+                            <action selector="refresh" destination="ykC-PN-84G" eventType="primaryActionTriggered" id="In1-Gx-cJa"/>
+                        </connections>
+                    </refreshControl>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rQ8-vl-MMV" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
