--- a/EssentialDevelopper/EssentialFeed_iOS/Feed.storyboard
+++ b/EssentialDevelopper/EssentialFeed_iOS/Feed.storyboard
@@ -17,7 +17,7 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <color key="sectionIndexBackgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="FeedImageCell" rowHeight="640" id="rjj-lB-i4E" customClass="FeedImageCell" customModule="Prototype" customModuleProvider="target">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="FeedImageCell" rowHeight="640" id="rjj-lB-i4E" customClass="FeedImageCell" customModule="EssentialFeed_iOS" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="44.5" width="414" height="640"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="rjj-lB-i4E" id="KqZ-r8-UJw">
@@ -112,6 +112,7 @@
                         <connections>
                             <outlet property="dataSource" destination="mlG-CZ-vLv" id="4mP-lq-lhL"/>
                             <outlet property="delegate" destination="mlG-CZ-vLv" id="2fl-yA-puH"/>
+                            <outlet property="prefetchDataSource" destination="mlG-CZ-vLv" id="aYF-8G-WJY"/>
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" id="zPQ-jQ-904"/>
