Fix potential crash - ReloadData call didEndDisplayingCell behind the scenes where we call cancel load which can lead to a crash. we'd be cancelling requests in the wrong models or crash in case the model has less items than the previous model

--- a/EssentialFeedStudy/EssentialFeed_iOS/Feed.storyboard
+++ b/EssentialFeedStudy/EssentialFeed_iOS/Feed.storyboard
@@ -107,6 +107,9 @@
                                                                 </imageReference>
                                                                 <preferredSymbolConfiguration key="preferredSymbolConfigurationForImage" configurationType="pointSize" pointSize="50"/>
                                                             </buttonConfiguration>
+                                                            <connections>
+                                                                <action selector="retryAction" destination="rjj-lB-i4E" eventType="touchUpInside" id="Eza-0a-fTG"/>
+                                                            </connections>
                                                         </button>
                                                     </subviews>
                                                     <color key="backgroundColor" systemColor="secondarySystemBackgroundColor"/>
